# neba

./: .gitignore  ANALISI_v0.2.14.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  WHATSNEW.md  test.sh  test_suite.neba  test_v013_v019.neba  test_v0211.neba  test_v0212.neba  test_v0215.neba  test_v023_v024.neba  test_v025.neba  test_v026_v027.neba  tmp
benchmarks/: bench_complete.neba  bench_python.py  bench_v0.neba  bench_v1.neba  bench_v2.neba  bench_vs_python.neba  results_python_comparison.md  results_v0.md  results_v1.md  results_v2.md  results_v3.md  results_vs_python.md
crates/neba/: Cargo.toml
crates/neba/src/: main.rs
crates/neba_interpreter/: Cargo.toml
crates/neba_interpreter/src/: environment.rs  error.rs  interpreter.rs  lib.rs  stdlib.rs  value.rs
crates/neba_lexer/: Cargo.toml
crates/neba_lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/neba_parser/: Cargo.toml
crates/neba_parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/neba_repl/: Cargo.toml
crates/neba_repl/src/: main.rs
crates/neba_typecheck/: Cargo.toml
crates/neba_typecheck/src/: check.rs  (+5 more)
crates/neba_vm/: Cargo.toml
docs/: LANGUAGE.md  MEMORY_REPORT.md
docs/dev/: decisions.md  roadmap.md
tests/: benchmark.neba  regression.neba  test_complete_v0232.neba  test_comprehensive.neba  test_ndarray.neba  test_ndarray_complete.neba  test_ndarray_v028.neba  test_ndarray_views.neba  test_suite.neba  test_suite_v026.neba  test_v0216.neba  test_v0217.neba  test_v0218.neba  test_v0219.neba  test_v0220.neba  test_v0222.neba
tests/lexer_tests/: basic_tokens.neba
(+8 files in other folders)
